manifest/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress-2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp/\w+(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kuber-svc
                port:
                  number: 80
